--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-ruler-pencil feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Power BI.svg" alt=""></i>
           </div>
           <div>
             <h4>Power BI</h4>
@@ -162,7 +162,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-layout-cta-left feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Domo.svg" alt=""></i>
           </div>
           <div>
             <h4>DOMO</h4>
@@ -176,7 +176,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-split-v-alt feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Looker.svg" alt=""></i>
           </div>
           <div>
             <h4>Looker</h4>
@@ -190,7 +190,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-layers-alt feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Tabluea.svg" alt=""></i>
           </div>
           <div>
             <h4>Tableau</h4>
@@ -204,7 +204,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-layers-alt feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Azure.svg" alt=""></i>
           </div>
           <div>
             <h4>Azure</h4>
@@ -218,7 +218,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-layers-alt feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Boomi.svg" alt=""></i>
           </div>
           <div>
             <h4>Boomi</h4>
@@ -232,7 +232,7 @@
       <div class="col-md-4 mb-80">
         <div class="d-flex feature-item">
           <div>
-            <i class="ti-layers-alt feature-icon mr-4"></i>
+            <i class="feature-icon mr-4"><img src="images/Icons/Zoho Analytics.svg" alt=""></i>
           </div>
           <div>
             <h4>Zoho Analytics</h4>
