--- a/index.html
+++ b/index.html
@@ -49,22 +49,20 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="#feature">Feature</a>
+            <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="partners.html">Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="service.html">Service</a>
+            <a class="nav-link" href="resources.html">Resources</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="#team">Team</a>
+            <a class="nav-link" href="careers.html">Careers</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="#pricing">Partners</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
         <a href="#" class="btn btn-primary ml-lg-3 primary-shadow">Let's Talk</a>
@@ -83,7 +81,7 @@
           Modern BI & Analytics</h1>
         <p class="mb-4">We build strategic data analytics platforms helping businesses gain value from their data assets and 
           extend their capabilities to truly data-driven decision making.</p>
-        <a href="#" class="btn btn-secondary btn-lg">Let's Talk</a>
+        <a href="contact.html" class="btn btn-secondary btn-lg">Let's Talk</a>
         <!-- banner image -->
         <img class="img-fluid w-100 banner-image" src="images/hero-area/banner-img.png" alt="banner-img">
       </div>
@@ -151,10 +149,9 @@
           <div>
             <i class="feature-icon mr-4"><img src="images/Icons/Power BI.svg" alt=""></i>
           </div>
-          <div>
+          <div class="">
             <h4>Power BI</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="power_bi.html" target="_blank">Learn More </a>
           </div>
         </div>
       </div>
@@ -164,10 +161,9 @@
           <div>
             <i class="feature-icon mr-4"><img src="images/Icons/Domo.svg" alt=""></i>
           </div>
-          <div>
+          <div class="bi-tools"> 
             <h4>DOMO</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="domo.html">Learn More </a>
           </div>
         </div>
       </div>
@@ -180,8 +176,7 @@
           </div>
           <div>
             <h4>Looker</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="looker.html">Learn More </a>
           </div>
         </div>
       </div>
@@ -194,8 +189,7 @@
           </div>
           <div>
             <h4>Tableau</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="google.com">Learn More </a>
           </div>
         </div>
       </div>
@@ -208,8 +202,7 @@
           </div>
           <div>
             <h4>Azure</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="google.com">Learn More </a>
           </div>
         </div>
       </div>
@@ -222,8 +215,7 @@
           </div>
           <div>
             <h4>Boomi</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="google.com">Learn More </a>
           </div>
         </div>
       </div>
@@ -236,8 +228,7 @@
           </div>
           <div>
             <h4>Zoho Analytics</h4>
-            <p>Consectetur adipiscing elit donec tempus
-              pellentesque dui.</p>
+            <a href="google.com">Learn More </a>
           </div>
         </div>
       </div>
