About US, Partners, Photo Curosel
About US, Partners, Photo Curosel

--- a/index.html
+++ b/index.html
@@ -48,14 +48,32 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About Us
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="lifeatGWC.html">Life@GWC</a>
+              <a class="dropdown-item" target="_blan" href="about.html">Team</a>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="partners.html">Partners</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Partners
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="domo.html">DOMO</a>
+              <a class="dropdown-item" target="_blan" href="zoho-analytics.html">Zoho Analytics</a>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="resources.html">Resources</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Resourses
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="case-studies.html">Case Studies</a>
+              <a class="dropdown-item" target="_blan" href="zoho-analytics.html">Blogs</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="careers.html">Careers</a>
@@ -65,7 +83,7 @@
             <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
-        <a href="#" class="btn btn-primary ml-lg-3 primary-shadow">Let's Talk</a>
+        <a href="#" class="btn btn-primary ml-lg-1 primary-shadow">Let's Talk</a>
       </div>
     </nav>
   </div>
@@ -425,6 +443,15 @@
 
 </section>
 <!-- /client logo slider -->
+
+
+
+
+
+
+
+
+
 
 <!-- newsletter -->
 <section class="newsletter">
